# gotennet-other

./: README.md  pyproject.toml  train_transition1x.py
ExpressiveGeoNet/: LICENSE  README.md  requirements.txt  test.py  train.py
ExpressiveGeoNet/configs/: test.yaml  train.yaml
ExpressiveGeoNet/configs/callbacks/: default.yaml
ExpressiveGeoNet/configs/dataset/: md22.yaml  molecule3d.yaml  qm9.yaml  rmd17.yaml
ExpressiveGeoNet/configs/experiment/: md22.yaml  md22_compact.yaml  md22_compact_original.yaml  md22_original.yaml  md22_paper.yaml  md22_tuned.yaml  md22_wide.yaml  md22_wide_original.yaml  molecule3d.yaml  molecule3d_original.yaml  molecule3d_tuned.yaml  qm9.yaml  qm9_large.yaml  qm9_large_aggressive.yaml  qm9_large_original.yaml  qm9_large_stable.yaml  qm9_original.yaml  qm9_paper.yaml  qm9_small.yaml  qm9_small_original.yaml  qm9_tuned.yaml  rmd17.yaml  rmd17_original.yaml  rmd17_tuned.yaml
ExpressiveGeoNet/scripts/: train_matrix.sh
ExpressiveGeoNet/src/: __init__.py
configs/: sn2rxn.yaml  sn2rxn_debug_synthetic.yaml  sn2rxn_full.yaml  sn2rxn_smoke.yaml  transition1x.yaml  transition1x_debug_synthetic.yaml  transition1x_full.yaml  transition1x_smoke.yaml
gotennet_other/: __init__.py  config.py  data.py  metrics.py  model.py  train.py
scripts/: download_sn2rxn.py  download_transition1x.py  eval_sn2rxn.py  eval_transition1x.py  inspect_sn2rxn.py  inspect_transition1x.py  train_sn2rxn.py  train_transition1x.py
tests/: test_data_and_collate.py  test_full_pipeline.py  test_scripts_and_eval.py  test_smoke_transition1x.py  test_train_and_metrics.py
(+52 files in other folders)
