[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gotennet-other"
version = "0.1.0"
description = "Minimal GotenNet-style energy/force training on OpenQDC Transition1X"
requires-python = ">=3.10"
dependencies = ["torch>=2.1", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]
openqdc = ["openqdc"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["gotennet_other"]
